--- a/package.json
+++ b/package.json
@@ -46,6 +46,9 @@
     "eth-ens-namehash": "^2.0.8",
     "file-saver": "^2.0.1",
     "history": "^4.9.0",
+    "i18next": "^19.7.0",
+    "i18next-browser-languagedetector": "^6.0.1",
+    "i18next-http-backend": "^1.0.18",
     "lodash.debounce": "^4.0.8",
     "lodash.memoize": "^4.1.2",
     "lodash.throttle": "^4.1.1",
